log
Thu Apr 21 15:33:25 UTC 2022: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:16: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘rigth’; did you mean ‘right’?
       aux=aux->rigth;
                ^~~~~
                right
Compilation failed
0cbc8bd
Thu Apr 21 15:33:54 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
a17c4d7
Sun Apr 24 23:18:04 UTC 2022: 
 treemap.c | 71 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 64 insertions(+), 7 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:30: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
     if(is_equal(tree, current->key, key) == 1) break;
                              ^~
treemap.c:53:38: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
       if(tree->lower_than(key,current->key) == 1){
                                      ^~
treemap.c:54:25: error: ‘aux’ undeclared (first use in this function)
         current->left = aux;
                         ^~~
treemap.c:54:25: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:57:34: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
       if(tree->lower_than(current->key,key) == 1){
                                  ^~
treemap.c:63:37: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
     if(tree->lower_than(key, current->key) == 1){
                                     ^~
treemap.c:67:32: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
     if(tree->lower_than(current->key, key) == 1){
                                ^~
treemap.c:48:13: error: unused variable ‘nodo’ [-Werror=unused-variable]
   TreeNode *nodo = createTreeNode(key, value);
             ^~~~
treemap.c: In function ‘upperBound’:
treemap.c:118:9: error: ‘auxi’ undeclared (first use in this function); did you mean ‘aux2’?
   while(auxi != NULL){
         ^~~~
         aux2
treemap.c:119:36: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
       if(tree->lower_than(key, aux2->key) == 1){
                                    ^~
treemap.c: In function ‘firstTreeMap’:
treemap.c:130:17: error: implicit declaration of function ‘mimimum’; did you mean ‘minimum’? [-Werror=implicit-function-declaration]
   TreeNode*aux1=mimimum(tree->root);
                 ^~~~~~~
                 minimum
treemap.c:130:17: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:131:12: error: ‘aux’ undeclared (first use in this function); did you mean ‘aux1’?
     return aux->value;
            ^~~
            aux1
treemap.c:130:12: error: unused variable ‘aux1’ [-Werror=unused-variable]
   TreeNode*aux1=mimimum(tree->root);
            ^~~~
treemap.c: In function ‘nextTreeMap’:
treemap.c:139:3: error: expected ‘;’ before ‘}’ token
   }
   ^
treemap.c:145:16: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   TreeMap* aux=tree->current->parent;
                ^~~~
treemap.c:146:44: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘right’
   while(aux != NULL && tree->current == aux->right){
                                            ^~
treemap.c:147:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tree->current=aux;
                  ^
treemap.c:148:14: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘parent’; did you mean ‘current’?
     aux=aux->parent;
              ^~~~~~
              current
treemap.c:150:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
   tree->current=aux;
                ^
treemap.c:154:23: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘value’
   return tree->current->value;
                       ^~
treemap.c: In function ‘upperBound’:
treemap.c:127:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
treemap.c: In function ‘firstTreeMap’:
treemap.c:132:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
treemap.c: In function ‘nextTreeMap’:
treemap.c:155:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Compilation failed
a2894fc
